<resources>
    <string name="app_name">nobias</string>
    <string name="app_no">no</string>
    <string name="app_bias">bias</string>
    <string name="facebook_app_id">479146246026288</string>
    <string name="fb_login_protocol_scheme">fb586579005288343</string>
    <string name="user">user</string>
    <string name="consultant">consultant</string>
    <string name="tagFragmentHome">tagFragmentHome</string>
    <string name="tagFragmentNobias">tagFragmentNobias</string>
    <string name="tagFragmentSchedule">tagFragmentSchedule</string>
    <string name="tagFragmentSettings">tagFragmentSettings</string>
    <string name="tagFragmentConsultants">tagFragmentConsultants</string>
    <string name="tagFragmentTwilio">tagFragmentTwilio</string>
    <string name="tagFragmentConsultantInfo">tagFragmentConsultantInfo</string>
    <string name="tagFragmentConsultantSaveRequest">tagFragmentConsultantSaveRequest</string>
    <string name="tagFragmentStripeCardView">tagFragmentStripeCardView</string>
    <string name="tagFragmentTimeSlot">tagFragmentTimeSlot</string>
    <string name="tagConsultantRow">tagConsultantRow</string>
    <string name="tagConsultantInfo">tagConsultantInfo</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="rememberMe">"Remember Me?  "</string>
    <string name="createAccount">create account</string>
    <string name="lets">let\'s</string>
    <string name="getStarted">get started</string>
    <string name="logout">log out</string>
    <string name="loginWith">login with</string>
    <string name="facebook">Facebook</string>
    <string name="needHelp">I Need Help Now</string>
    <string name="wantBestConsultant">I Want the best Consultants for my needs</string>
    <string name="session_date">Session Date</string>
    <string name="session_topic">Session Topic</string>
    <string name="btn_continue">Continue</string>
    <string name="consulting_needs">Tell us a little about your consulting needs:</string>
    <string name="save_request">Save Request</string>
    <string name="consultant_settings">Consultant Settings</string>
    <string name="set_specialities">Set Specialities</string>
    <string name="specialities">Specialities</string>
    <string name="set_available_hours">Set Available Hours</string>
    <string name="update_info">Update Info</string>
    <string name="app_version">App Version</string>
    <string name="set_hours_title">Please select the hours that you are available for each day of the work week for consulting appointments.</string>
    <string name="monday">Monday</string>
    <string name="available_hours">Available Hours:</string>
    <string name="start">Start</string>
    <string name="to">to</string>
    <string name="end">End</string>
    <string name="active">Active</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="prefApplication">prefApplication</string>
    <string name="prefIsUserLoggedIn">prefIsUserLoggedIn</string>
    <string name="prefUserId">prefUserId</string>
    <string name="prefUserEmail">prefUserEmail</string>
    <string name="prefGcmToken">prefGcmToken</string>
    <string name="prefUserPassword">prefUserPassword</string>
    <string name="prefUserAvatar">prefUserAvatar</string>
    <string name="prefUserName">prefUserName</string>
    <string name="text_norecordfound">No record found</string>
    <string name="text_forgotpassword">Forgot password?</string>
    <string name="text_login">Login</string>
    <string name="text_submit">Submit</string>
    <string name="text_logoutconfirm">Are you sure you want to logout?</string>
    <string name="hint_emailaddress">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_entercomment">Enter comment</string>
    <string name="error_blank_email">Enter email</string>
    <string name="error_invalid_email">Enter valid email</string>
    <string name="error_blank_confirm_email">Enter confirm email</string>
    <string name="error_blank_companyname">Enter company name</string>
    <string name="error_blank_phone">Enter phone number</string>
    <string name="error_blank_job_title">Enter job title</string>
    <string name="error_blank_password">Enter password</string>
    <string name="error_password_not_matched">Re entered password does not match</string>
    <string name="error_blank_confirm_password">Re enter your password</string>
    <string name="error_invalid_password">Password should be greater than 6 characters. Make sure that it contains one capital letter and one number.</string>
    <string name="message_something_wrong">Something went wrong. Please try after sometime</string>
    <string name="message_noconnection">No connection</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="message_exitapp">Are you sure you want to exit the app?</string>
    <string name="message_alert">Alert</string>
    <string name="message_camera_absent">This feature requires camera, and your device does not have one</string>
    <string name="message_unabletochooseimage">Unable to choose image</string>
    <string name="message_unabletochoosedocument">Unable to choose document</string>
    <string name="message_camera_unabletocapture">Unable to capture from camera</string>
    <string name="message_camera_unabletoopen">Unable to open camera</string>
    <string name="text_storage">Storage</string>
    <string name="broadcastFragBaseError">broadcastFragBaseError</string>
    <string name="broadcastImageResult">broadcastImageResult</string>
    <string name="broadcastDocumentResult">broadcastDocumentResult</string>
    <string name="bundleDocumentIsAdditional">bundleDocumentIsAdditional</string>
    <string name="bundleDocumentFilePath">bundleDocumentFilePath</string>
    <string name="bundleImageResultStream">bundleImageResultStream</string>
    <string name="bundleImageResultUri">bundleImageResultUri</string>
    <string name="bundleImageResultBase64">bundleImageResultBase</string>
    <string name="bundleFragBaseError">bundleFragBaseError</string>
    <string name="bundleFragBaseErrorString">bundleFragBaseErrorString</string>
    <string name="bundleChooserProgressIsToShow">bundleChooserProgressIsToShow</string>
    <string name="bundleConsultantId">bundleConsultantId</string>
    <string name="text_selfie">Selfie</string>
    <string name="text_uploaddocument">Upload Document</string>
    <string name="text_camera">Camera</string>
    <string name="text_request">Request</string>
    <string name="text_photogallery">Photo gallery</string>
    <string name="text_uploadphotousing">Upload photo using</string>
    <string name="text_uploaddocumentusing">Upload document using</string>
    <string name="navigationDrawerOpen">navigationDrawerOpen</string>
    <string name="navigationDrawerClose">navigationDrawerClose</string>
    <string name="permission_camera">Camera permission is needed to capture image</string>
    <string name="permission_externalstorage_camera">External storage permission is needed to
        fetch data captured from camera</string>
    <string name="permission_externalstorage_photogallery">External storage permission is needed to
        fetch image information</string>
    <string name="permission_camera_external">Camera permission is needed to capture image
        and write external storage permission is needed to fetch image captured from camera</string>
    <string name="permission_externalstorage_document">External storage permission is needed to
        fetch document</string>
    <string name="permission_calendar">Calendar permission is needed to
        add event for accepted meeting.</string>
    <string name="rationale_finelocation">Location permission would be required to obtain your current location</string>
    <string name="enable_location">Enable location services to fetch your location</string>
    <string name="formTypeSchemesAdd">formTypeSchemesAdd</string>
    <string name="apiCheckIn">checkin</string>
    <string name="apiCheckAttendance">attendance</string>
    <string name="apiTypeOngoing">ongoing</string>
    <string name="apiTypeResolved">resolved</string>
    <string name="apiFormListApiType">extra_field</string>
    <string name="select_assignuser">Select user to be assigned</string>
    <string name="drawer_general">General</string>
    <string name="bundleFormMobileAccess">bundleFormMobileAccess</string>
    <string name="error_blank_credential">Enter either of username/email address/mobile number</string>
    <string name="error_select_assignuser">Select user to be assigned</string>
    <string name="error_select_session_topic">Select session topic</string>
    <string name="error_consultant_needs">Enter your consulting needs.</string>
    <string name="error_blank_firstname">Enter first name</string>
    <string name="error_blank_lastname">Enter last name</string>
    <string name="error_blank_dob">Select date of birth</string>
    <string name="error_blank_date">Select date</string>
    <string name="error_blank_session_date">Select Session Date</string>
    <string name="error_blank_class">Enter type of class</string>
    <string name="error_blank_username">Enter username</string>
    <string name="error_blank_education">Enter education</string>
    <string name="error_blank_consultant_code">Enter consultant code</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="past_consultant">Past Consultant</string>
    <string name="upcoming_consultant">Upcoming Consultant</string>
    <string name="create_account_text">Will you be registering as a <b>user</b> or as a <b>consultant?</b></string>
    <string name="security_info_text">welcome to no<b>bias</b> we\'re glad to see you</string>
    <string name="please_create_a_password">Please create a password</string>
    <string name="continue_info">continue</string>
    <string name="please_enter_first_name">Please enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="company_name">Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_email_address">Confirm email address</string>
    <string name="error_filesize_prefix">Please choose another</string>
    <string name="error_filesize_type_document">document</string>
    <string name="error_filesize_type_image">image</string>
    <string name="error_filesize_type_suffix_min">, as size should be more than or equal to</string>
    <string name="error_filesize_type_suffix_max">, as size should be less than or equal to</string>
    <string name="error_filesize_suffix_min"> </string>
    <string name="error_filesize_suffix_max"> </string>
    <string name="select">select</string>
    <string name="image">image</string>
    <string name="save_profile">save</string>
    <string name="profile">profile</string>
    <string name="broadcastPastConsultantRate">broadcastPastConsultantRate</string>
    <string name="terms_of_service">terms of service</string>
    <string name="reset_password">reset password</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="minutes15">15 Minutes Before Meeting</string>
    <string name="minutes30">30 Minutes Before Meeting</string>
    <string name="an_hour">1 Hour Before Meeting</string>
    <string name="a_day">1 Day Before Meeting</string>
    <string name="i_know_my_consultants_code">I know my consultants code:</string>
    <string name="consultant_code">consultant code</string>
    <string name="select_date">select date</string>
</resources>