<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vmScheduleTab"
            type="com.nobias.businesslogic.viewmodel.fragments.ViewModelScheduleTab" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_twenty"
            android:layout_marginRight="@dimen/margin_twenty"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNeedHelp"
                style="@style/buttonStyleMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_twenty"
                android:clickable="@{!vmScheduleTab.observerProgressBar}"
                android:onClick="@{() -> vmScheduleTab.onNeedHelpClick()}"
                android:text="@string/needHelp" />

            <Button
                android:id="@+id/btnWantBestConsultant"
                style="@style/buttonStyleMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnNeedHelp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_twenty"
                android:clickable="@{!vmScheduleTab.observerProgressBar}"
                android:onClick="@{() -> vmScheduleTab.onWantConsultantClick()}"
                android:text="@string/wantBestConsultant" />

            <TextView
                style="@style/textStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnWantBestConsultant"
                android:layout_marginTop="@dimen/margin_twenty"
                android:text="@string/i_know_my_consultants_code"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_twenty_two" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btnSubmit"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtConsultantCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_ten"
                        android:hint="@string/consultant_code"
                        android:importantForAutofill="no"
                        android:textColorHint="@color/colorAccent"
                        app:errorEnabled="@{vmScheduleTab.observerErrorEnabledConsultantCode}"
                        app:setEnabledTIL="@{!vmScheduleTab.observerProgressBar}"
                        app:setError="@{vmScheduleTab.observerErrorConsultantCode}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:text="@={vmScheduleTab.observerConsultantCode}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_ten"
                        android:hint="@string/select_date"
                        android:importantForAutofill="no"
                        android:textColorHint="@color/colorAccent"
                        app:errorEnabled="@{vmScheduleTab.observerErrorEnabledDate}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtConfirmEmail"
                        app:setEnabledTIL="@{!vmScheduleTab.observerProgressBar}"
                        app:setError="@{vmScheduleTab.observerErrorDate}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:onClick="@{() -> vmScheduleTab.onDateClick()}"
                            android:singleLine="true"
                            android:text="@={vmScheduleTab.observerDate}" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/buttonStyleMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:clickable="@{!vmScheduleTab.observerProgressBar}"
                    android:onClick="@{() -> vmScheduleTab.onSubmitClick()}"
                    android:text="@string/text_submit" />
            </RelativeLayout>
        </LinearLayout>

        <ProgressBar
            style="@style/progressBarCentre"
            android:visibility="@{vmScheduleTab.observerProgressBar ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>
</layout>